<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/baseline_data_array_24"
            android:title="@string/data" />
        <item
            android:id="@+id/nav_webView"
            android:icon="@drawable/baseline_browser_updated_24"
            android:title="@string/web_view" />
        <item
            android:id="@+id/nav_worker"
            android:icon="@drawable/baseline_forum_24"
            android:title="@string/forum" />
        <item
            android:id="@+id/nav_age_image"
            android:icon="@drawable/baseline_camera_24"
            android:title="@string/age_image" />
        <item
            android:id="@+id/nav_audio_changer"
            android:icon="@drawable/baseline_audiotrack_24"
            android:title="@string/audio_changer" />
        <item
            android:id="@+id/nav_hygrometer"
            android:icon="@drawable/baseline_gps_fixed_24"
            android:title="@string/hygrometer" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_emoji_people_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_file_processing"
            android:icon="@drawable/baseline_enhanced_encryption_24"
            android:title="@string/file_encryption" />
        <item
            android:id="@+id/nav_year_in_history"
            android:icon="@drawable/baseline_menu_book_24"
            android:title="@string/year_in_history" />
        <item
            android:id="@+id/nav_establishments"
            android:icon="@drawable/baseline_school_24"
            android:title="@string/establishments" />
    </group>
</menu>